# frida-rs-example

./: Cargo.toml  Makefile  README.md  postprocess.py
src/: lib.rs
