[package]
name = "frida-rs-example"
version = "0.1.0"
authors = ["Terry Chia <terrycwk1994@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
frida-rs = "0.1.0"
wasm-bindgen = "0.2.62"
js-sys = "0.3.39"
serde_json = "1.0.53"
serde_derive = "1.0.110"
serde = { version = "1.0.110", features = ["derive"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
